# ManureCouplingStrategies

./: LICENSE  README.md  __init__.py  basic_usage.py  include.md  index.md  main.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  redistribution.py  spatial.py  transport.py
io/: __init__.py  data_io.py  raster.py  vector.py
tests/: test_io.py  test_redistribution.py  test_transport.py  test_utils.py
utils/: __init__.py  config.py  geometry.py  logging.py  logging_utils.py
