[project]
name = "manurecouplingstrategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.6.5",
    "dotenv>=0.9.9",
    "geopandas>=1.0.1",
    "highspy>=1.10.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
]
